--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:hint="Mã thẻ">
+                android:hint="Tên tài khoản">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/text_username"
